gitops-manifests/platform/ingress/manifests/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.daanggo.com
    secretName: crt-secret-v2  
  rules:
  - host: grafana.daanggo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: g
            port:
              number: 80
