gitops-manifests/platform/ingress/manifests/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-tls
  namespace: application
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - daanggo.com
    secretName: crt-secret-v1  
  rules:
  - host: daanggo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-service-name
            port:
              number: 80
